--- a/app/src/main/res/layout/demo_activity_video_play.xml
+++ b/app/src/main/res/layout/demo_activity_video_play.xml
@@ -22,6 +22,12 @@
             android:layout_height="wrap_content"
             android:text="play/stop" />
 
+        <Button
+            android:id="@+id/video_test_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Test" />
+
     </LinearLayout>
 
 </FrameLayout>
