--- a/app/src/main/res/layout/demo_activity_main.xml
+++ b/app/src/main/res/layout/demo_activity_main.xml
@@ -17,10 +17,17 @@
         android:text="LITHO" />
 
     <Button
+        android:id="@+id/button_capture"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="CameraX"
+        android:textAllCaps="false" />
+
+    <Button
         android:id="@+id/button_pick"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="选择" />
+        android:text="选择照片" />
 
     <ImageView
         android:id="@+id/image_display"
