--- a/app/src/main/res/layout/demo_activity_main.xml
+++ b/app/src/main/res/layout/demo_activity_main.xml
@@ -4,15 +4,19 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
+    <me.juhezi.mediademo.widgets.CornerShadowLinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="8dp">
 
         <Button
             android:id="@+id/button_video_player"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="20dp"
             android:layout_weight="1"
             android:backgroundTint="@android:color/holo_blue_bright"
             android:text="播放视频"
@@ -22,6 +26,8 @@
             android:id="@+id/button_litho"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="20dp"
             android:layout_weight="1"
             android:backgroundTint="@android:color/holo_blue_light"
             android:text="LITHO"
@@ -31,6 +37,8 @@
             android:id="@+id/button_capture"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="20dp"
             android:layout_weight="1"
             android:backgroundTint="@android:color/holo_blue_dark"
             android:text="CameraX"
@@ -41,12 +49,15 @@
             android:id="@+id/button_pick"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="20dp"
             android:layout_weight="1"
             android:backgroundTint="#0000FF"
             android:text="选择照片"
             android:textColor="@android:color/white" />
 
-    </LinearLayout>
+    </me.juhezi.mediademo.widgets.CornerShadowLinearLayout>
 
     <Button
         android:id="@+id/button_async_inflate"
