--- a/app/src/main/res/layout/demo_activity_main.xml
+++ b/app/src/main/res/layout/demo_activity_main.xml
@@ -59,13 +59,30 @@
 
     </me.juhezi.mediademo.widgets.CornerShadowLinearLayout>
 
-    <Button
-        android:id="@+id/button_async_inflate"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@android:color/holo_red_light"
-        android:text="异步加载布局"
-        android:textColor="@android:color/white" />
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button_async_inflate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@android:color/holo_red_light"
+            android:text="异步加载布局"
+            android:layout_weight="1"
+            android:textColor="@android:color/white" />
+
+        <Button
+            android:id="@+id/button_status_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@android:color/holo_orange_light"
+            android:text="浅色|深色状态栏"
+            android:layout_weight="1"
+            android:textColor="@android:color/white" />
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/button_v2ex"
