--- a/slow-cut/src/main/res/drawable/bg_edittext_cursor.xml
+++ b/slow-cut/src/main/res/drawable/bg_edittext_cursor.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+    <solid android:color="@color/s_FF5000" />
+    <corners
+        android:radius="@dimen/dimen_1dp"
+        tools:ignore="CornerRadiusDetectorRef" />
+    <size android:width="@dimen/dimen_2dp" />
+</shape>
