--- a/slow-cut/src/main/res/values/dimens.xml
+++ b/slow-cut/src/main/res/values/dimens.xml
@@ -6,4 +6,22 @@
     <dimen name="corner_shadow_view_shadow_radius">10dp</dimen>
     <dimen name="page_toolbar_margin">16dp</dimen>
 
+    <dimen name="dimen_200dp">200dp</dimen>
+    <dimen name="dimen_48dp">48dp</dimen>
+    <dimen name="dimen_32dp">32dp</dimen>
+    <dimen name="dimen_24dp">24dp</dimen>
+    <dimen name="dimen_12dp">12dp</dimen>
+    <dimen name="dimen_11dp">11dp</dimen>
+    <dimen name="dimen_8dp">8dp</dimen>
+    <dimen name="dimen_6dp">6dp</dimen>
+    <dimen name="dimen_2dp">2dp</dimen>
+    <dimen name="dimen_1dp">1dp</dimen>
+
+
+    <dimen name="dimen_14sp">14sp</dimen>
+    <dimen name="dimen_13sp">13sp</dimen>
+    <dimen name="dimen_18sp">18sp</dimen>
+    <dimen name="dimen_20sp">20sp</dimen>
+
+
 </resources>
