RoundSpan 支持显示图标

--- a/slow-cut/src/main/res/values/dimens.xml
+++ b/slow-cut/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="dimen_11dp">11dp</dimen>
     <dimen name="dimen_8dp">8dp</dimen>
     <dimen name="dimen_6dp">6dp</dimen>
+    <dimen name="dimen_4dp">4dp</dimen>
     <dimen name="dimen_2dp">2dp</dimen>
     <dimen name="dimen_1dp">1dp</dimen>
 
