--- a/demo/src/main/res/layout/layout_activity_v2ex.xml
+++ b/demo/src/main/res/layout/layout_activity_v2ex.xml
@@ -39,6 +39,13 @@
             android:layout_weight="1"
             android:text="开始动画" />
 
+        <Button
+            android:id="@+id/button_hello"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Hello"/>
+
     </LinearLayout>
 
     <ImageView
