--- a/slow-cut/src/main/res/values/dimens.xml
+++ b/slow-cut/src/main/res/values/dimens.xml
@@ -10,6 +10,8 @@
     <dimen name="dimen_48dp">48dp</dimen>
     <dimen name="dimen_32dp">32dp</dimen>
     <dimen name="dimen_24dp">24dp</dimen>
+    <dimen name="dimen_19dp">19dp</dimen>
+    <dimen name="dimen_18dp">18dp</dimen>
     <dimen name="dimen_12dp">12dp</dimen>
     <dimen name="dimen_11dp">11dp</dimen>
     <dimen name="dimen_8dp">8dp</dimen>
