--- a/noxus/src/main/res/layout/noxus_fragment.xml
+++ b/noxus/src/main/res/layout/noxus_fragment.xml
@@ -5,7 +5,7 @@
     android:id="@+id/noxus"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.NoxusFragment">
+    tools:context=".main.NoxusFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/lite_config_list"
